# time-devourer

./: .editorconfig  CMakeLists.txt  README.md  common.h  date.cpp  date.h  digital_font.cpp  digital_font.h  font.cpp  font.h  gdi.h  gdi_obj.h  main.cpp  proc.cpp  proc.h  resource.h  setting_window.cpp  setting_window.h  simple_xml.cpp  simple_xml.h  startup.cpp  startup.h  task_sched.cpp  task_sched.h  test_window.cpp  test_window.h  time.cpp  time_proc.cpp  time_proc.h  time_window.cpp  time_window.h  timer.h  timer.rc  timer.sln  timer.vcxproj  timer.vcxproj.filters  tray.cpp  tray.h
.github/workflows/: cmake-single-platform.yml
